tests/setup.js
// ğŸ§ª Jest í…ŒìŠ¤íŠ¸ ì„¤ì •
// í…ŒìŠ¤íŠ¸ ì‹¤í–‰ ì „ ê³µí†µ ì„¤ì •ì„ ìˆ˜í–‰í•©ë‹ˆë‹¤

// í…ŒìŠ¤íŠ¸ í™˜ê²½ ë³€ìˆ˜ ì„¤ì •
process.env.NODE_ENV = 'test';
process.env.PORT = '0'; // ëœë¤ í¬íŠ¸ ì‚¬ìš©

// í…ŒìŠ¤íŠ¸ íƒ€ì„ì•„ì›ƒ ì„¤ì •
jest.setTimeout(10000);

// ì „ì—­ í…ŒìŠ¤íŠ¸ ì„¤ì •
beforeAll(() => {
  console.log('ğŸ§ª í…ŒìŠ¤íŠ¸ ì‹œì‘');
});

afterAll(() => {
  console.log('âœ… í…ŒìŠ¤íŠ¸ ì™„ë£Œ');
});

// ê° í…ŒìŠ¤íŠ¸ ì „í›„ ì„¤ì •
beforeEach(() => {
  // í…ŒìŠ¤íŠ¸ë³„ ì´ˆê¸°í™” ë¡œì§
});

afterEach(() => {
  // í…ŒìŠ¤íŠ¸ë³„ ì •ë¦¬ ë¡œì§
});

// ì „ì—­ ëª¨í‚¹ ì„¤ì •
global.console = {
  ...console,
  // í…ŒìŠ¤íŠ¸ ì¤‘ console.log ì–µì œ (ì„ íƒì‚¬í•­)
  // log: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
};
